--- a/pom.xml
+++ b/pom.xml
@@ -292,6 +292,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.servicecomb.pack</groupId>
+        <artifactId>omega-transport-grpc</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.servicecomb.pack</groupId>
         <artifactId>omega-connector-grpc</artifactId>
         <version>0.5.0-SNAPSHOT</version>
       </dependency>
