--- a/demo/saga-spring-grpc-demo/booking.yaml
+++ b/demo/saga-spring-grpc-demo/booking.yaml
@@ -23,9 +23,11 @@ metadata:
   labels:
     app: booking
 spec:
+  externalIPs:
+    - 192.168.10.128
   ports:
   - port: 8083
-    targetPort: 8080
+    targetPort: 8083
     name: http
   selector:
     app: booking
@@ -45,13 +47,13 @@ spec:
     spec:
       containers:
       - name: booking
-        image: registry.cn-hangzhou.aliyuncs.com/rainbow954/booking:0.5.0-SNAPSHOT
+        image: registry.cn-hangzhou.aliyuncs.com/iotbull/booking-grpc:0.5.0-SNAPSHOT
         imagePullPolicy: Always
         env:
         - name: JAVA_OPTS
-          value: -Dalpha.cluster.address=alpha-server:8080 -Dcar.service.address=http://car:8082 -Dhotel.service.address=http://hotel:8081
+          value: -Dalpha.cluster.address=alpha-server:8080 -Dgrpc.client.car-grpc-server.host=car -Dcar.service.address=http://car:8082 -Dhotel.service.address=http://hotel:8081 
         ports:
-        - containerPort: 8080
+        - containerPort: 8083
 ---
 # Only for debugging
 # apiVersion: v1
